--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/osr-logo.jpg" />
+    <link rel="icon" type="image/jpg" href="/os-recruiter-frontend/osr-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OS Recruiter</title>
   </head>
